<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.login.LoginFragment">

    <!-- we use linear layout because all elements are aligned in same direction 'vertical' -->
    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="34dp"
        android:paddingEnd="34dp">

        <TextView
            android:id="@+id/login_title"
            style="@style/title_style"
            android:text="@string/login_title" />

        <TextView
            android:id="@+id/label_email_adress"
            style="@style/login_text_style"
            android:layout_marginTop="80dp"
            android:text="@string/email_adress_label" />

        <EditText
            android:id="@+id/edt_email_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_adress_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_label"
            style="@style/login_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:padding="6dp"
            android:text="@string/sign_up_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/next_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/sign_up_button" />
    </LinearLayout>
</layout>