<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.views.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.views.onboarding.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/welcome_screen">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.views.onboarding.InstructionsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/instruction_fragment">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.udacity.shoestore.views.shoe_listing.ShoeListingFragment"
        android:label="@string/shoe_listing_fragment_title"
        tools:layout="@layout/shoe_list_fragment">
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
        <action
            android:id="@+id/action_shoeListingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.views.shoe_detail.ShoeDetailFragment"
        android:label="@string/shoe_detail_fragment_title"
        tools:layout="@layout/shoe_detail_fragment">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:popUpTo="@id/shoeListingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>